Cuando lo ejecuto entra en bucle.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 message.topic.name1=${topic_name1:topicName1}
 message.topic.name2=${topic_name2:topicName2}
 message.topic.name3=${topic_name3:topicName3}
@@ -7,6 +8,6 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=myGroup
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.profesorp.kafka.jsonListener
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.example.kafka.jsonListener
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
